--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=service-discovery
-spring.cloud.config.uri=http://configserver:8071
+spring.config.import=configserver:http://configserver:8071
